[project]
name = "bach-skip_tracing_working_api"
version = "1.0.0"
description = "RapidAPI: oneapiproject/skip-tracing-working-api"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_skip_tracing_working_api = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-skip_tracing_working_api"
Repository = "https://github.com/bachstudio/bach-skip_tracing_working_api"
Documentation = "https://github.com/bachstudio/bach-skip_tracing_working_api#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'